Fix logo on small devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 html,
 body {
     height: 100%;
-    min-width: 340px;
+    min-width: 300px;
 }
 
 body {
@@ -174,6 +174,7 @@ header.scrolled {
 
 .introduction #buttons > .btn {
     flex: 1 1 0px;
+    max-width: 100%;
 }
 
 @media (max-width: calc(400px + 2em)) {
@@ -237,8 +238,7 @@ header.scrolled {
 }
 
 .presentation-icon {
-    max-width: 250px;
-    width: 60%;
+    width: 250px;
     border-radius: 5%;
 }
 
